--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 *.db
+
+# Byte-compiled / optimized
 __pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.env
+.venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
